<resources>
    <string name="app_name">Name Game</string>
    <string name="question">Who is %s %s?</string>
    <string name="cdFace">A face</string>
    <string name="action_mode_title">Mode</string>
    <string name="action_mode_standard">Standard</string>
    <string name="action_mode_no_ghosts">No Ghosts</string>
    <string name="action_mode_mat">Mat</string>
    <string name="action_mode_cheat">Cheat</string>
    <string name="action_refresh">Refresh</string>
    <string name="next_turn_content_description">Next</string>
</resources>
