<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mode"
        android:title="@string/action_mode_title"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item android:title="@string/action_mode_standard"
                    android:id="@+id/mode_standard"
                    android:checked="true"
                    />
                <item android:title="@string/action_mode_no_ghosts"
                    android:id="@+id/mode_no_ghost"
                    />
                <item android:title="@string/action_mode_mat"
                    android:id="@+id/mode_mat"
                    />
                <item android:title="@string/action_mode_cheat"
                    android:id="@+id/mode_cheat"
                    />
            </group>
        </menu>

    </item>


    <item
        android:id="@+id/refreshData"
        android:title="@string/action_refresh"
        app:showAsAction="never" />

</menu>